--- a/html/checkout.html
+++ b/html/checkout.html
@@ -138,7 +138,7 @@
                         <span class="col1 flx-jst-colmn-mini">
                         <div class="mini-flx">
                             <input class="target" type="radio">
-                            <h3>Standard Delivery Option</h2>
+                            <h3>Cash On Delivery</h2>
                         <i class="fa-solid fa-chevron-down"></i>
 
                         </div>
@@ -153,7 +153,7 @@
                         <span class="col1 flx-jst-colmn-mini">
                         <div class="mini-flx" >
                             <input class="target" type="radio">
-                        <h3>Standard Delivery Option</h2>
+                        <h3>Credit Card</h2>
                         <i class="fa-solid fa-chevron-down"></i>
 
                         </div>
@@ -186,7 +186,7 @@
                     <span class="col1 flx-jst-colmn-mini">
                     <div class="mini-flx" >
                         <input class="target" type="radio">
-                    <h3>Standard Delivery Option</h2>
+                    <h3>net banking</h2>
                     <i class="fa-solid fa-chevron-down"></i>
 
                     </div>
@@ -238,7 +238,7 @@
                     <span class="col1 flx-jst-colmn-mini">
                     <div class="mini-flx" >
                         <input class="target" type="radio">
-                    <h3>Standard Delivery Option</h2>
+                    <h3>my wallet</h2>
                     <i class="fa-solid fa-chevron-down"></i>
 
                     </div>
