complete checkout page and start with comming soon page

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -29,7 +29,7 @@
             <span>contact us</span>
         </div>
     </div>
-    <section class="checkout pd-all">
+    <section class="checkout pd-all flx-jst">
         <div class="divs">
             <div class="del-address">
                 <div class="myicon">
@@ -277,6 +277,71 @@
             </li>
                 </ul>
             </div>
+        </div>
+        <div>
+            <div class="to-product">
+                <h3>Order Summery</h3>
+                <ul class="products">
+                    <li class="flx-jst">
+                        <img class="sz-img" src="/img/imgheader/10028.png" alt="">
+                        <span class="name" >Bell pepper <span class="how-much co-bold" >X 3</span></span>
+                        <span class="price">$32.34</span>
+                    </li>
+                    <li class="flx-jst">
+                        <img class="sz-img" src="/img/imgheader/10028.png" alt="">
+                        <span class="name" >Bell pepper <span class="how-much co-bold" >X 3</span></span>
+                        <span class="price">$32.34</span>
+                    </li>
+                    <li class="flx-jst">
+                        <img class="sz-img" src="/img/imgheader/10028.png" alt="">
+                        <span class="name" >Bell pepper <span class="how-much co-bold" >X 3</span></span>
+                        <span class="price">$32.34</span>
+                    </li>
+                    <li class="flx-jst">
+                        <img class="sz-img" src="/img/imgheader/10028.png" alt="">
+                        <span class="name" >Bell pepper <span class="how-much co-bold" >X 3</span></span>
+                        <span class="price">$32.34</span>
+                    </li>
+                    <li class="flx-jst">
+                        <img class="sz-img" src="/img/imgheader/10028.png" alt="">
+                        <span class="name" >Bell pepper <span class="how-much co-bold" >X 3</span></span>
+                        <span class="price">$32.34</span>
+                    </li>
+                    <li class="flx-jst">
+                        <img class="sz-img" src="/img/imgheader/10028.png" alt="">
+                        <span class="name" >Bell pepper <span class="how-much co-bold" >X 3</span></span>
+                        <span class="price">$32.34</span>
+                    </li>
+                </ul>
+                <ul class="total">
+                    <li class="flx-jst" >
+                        <span>subtotal</span>
+                        <span id="sub-price">$111.81</span>
+                    </li>
+                    <li class="flx-jst" >
+                        <span>Shipping</span>
+                        <span id="sub-price">$8.81</span>
+                    </li>
+                    <li class="flx-jst" >
+                        <span>tax</span>
+                        <span id="sub-price">$29.434</span>
+                    </li>
+                    <li class="flx-jst cupon-code" >
+                        <span>Coupon/Code</span>
+                        <span id="sub-price">$-23.10</span>
+                    </li>
+                </ul>
+                <div class="total-usd flx-jst">
+                    <span>Total (USD)</span>
+                    <span class="to-usd">$19.28</span>
+                </div>
+            </div>
+            <div class="available-offers">
+                <span class="mini-flx" ><img class="sz-img" src="/img/imgheader/offer.svg" alt=""> <h4>Available Offers</h4></span>
+                <li>Combo: BB Royal Almond/Badam Californian, Extra Bold 100 gm...</li>
+                <li>combo: Royal Cashew Californian, Extra Bold 100 gm + BB Royal Honey 500 gm</li>
+            </div>
+            <button class="place-order" >place order</button>
         </div>
     </section>
 </body>
