complete coming soon page

--- a/html/coming.html
+++ b/html/coming.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/primary.css">
     
     <!-- js file  -->
-    <script defer src="/js/login.js" ></script>
+    <script defer src="/js/coming.js" ></script>
     <script defer src="/js/primary.js" ></script>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <p class="st-p" >We are currently working on an awesome new site. Stay tuned for more information. Subscribe to our newsletter to stay updated on our progress.</p>
         <div class="all-times flx-jst">
             <div class="day my-co flx-jst-colmn-mini">
-                <span class="d t-co">14</span>
+                <span class="d t-co">00</span>
                 <span>day</span>
             </div>
             <div class="hour my-co flx-jst-colmn-mini">
-                <span class="h t-co">20</span>
+                <span class="h t-co">00</span>
                 <span>hour</span>
             </div>
             <div class="minutes my-co flx-jst-colmn-mini">
-                <span class="m t-co">20</span>
+                <span class="m t-co">00</span>
                 <span>min</span>
             </div>
             <div class="second my-co flx-jst-colmn-mini">
-                <span class="m t-co">45</span>
+                <span class="s t-co">00</span>
                 <span>sec</span>
             </div>
         </div>
