complete some parts in FAQ page

--- a/html/FAQ.html
+++ b/html/FAQ.html
@@ -58,5 +58,41 @@
             </div>
         </div>
     </section>
+    <section class="faq">
+        <div class="ask-que">
+            <div class="content-ask">
+                <h1>Frequently Asked Questions</h1>
+                <p>We are answering most frequent questions. No worries if you not find exact one. You can find out more by searching or continuing clicking button below or directly <a href="">contact our support.</a> </p>
+            </div>
+        </div>
+        <div class="some-quest">
+            <div class="quest-answer">
+                <div class="q">
+                    <button>What is Fastkart and why was the name changed? 
+                        <i class="fa-solid fa-chevron-up"></i>
+                    </button>
+                    <div class="content">
+                        <p>
+                            Fastkart is leading the charge in transforming India’s vast, unorganised grocery landscape through cutting-edge technology and innovation. Blinkit is India’s largest and most convenient hyper-local delivery company, which enables you to order grocery, fruits & vegetables, and other daily essential products, directly via your mobile or web browser.
+
+                        To know the reason why we changed our brand name from Grofers to Fastkart, read this blog post.
+                        </p>
+                    </div>
+                </div>
+                <div class="q">
+                    <button>What is Fastkart and why was the name changed? 
+                        <i class="fa-solid fa-chevron-up"></i>
+                    </button>
+                    <div class="content">
+                        <p>
+                            Fastkart is leading the charge in transforming India’s vast, unorganised grocery landscape through cutting-edge technology and innovation. Blinkit is India’s largest and most convenient hyper-local delivery company, which enables you to order grocery, fruits & vegetables, and other daily essential products, directly via your mobile or web browser.
+
+                        To know the reason why we changed our brand name from Grofers to Fastkart, read this blog post.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
