complete ordersuccess page

--- a/html/cart.html
+++ b/html/cart.html
@@ -36,7 +36,7 @@
         <div class="coupon">
             <h1 class="cu-pd br-btm" >cart total</h1>
             <form class="cu-pd" action="">
-                <div class="myinput">
+                <div class="myinput-cart">
                     <label for="">Coupon Apply</label>
                     <input type="text" placeholder="enter cupon code |" required>
                     <button>apply</button>
