complated order tracking page

--- a/html/contact.html
+++ b/html/contact.html
@@ -100,3 +100,25 @@
     </div>
 </body>
 </html>
+<!-- <ul>
+    <li>
+        <h4>Order Processing</h4>
+        <h6 class="time">05:43 AM</h6>
+    </li>
+    <li>
+        <h4>Pre-Production</h4>
+        <h6 class="time">01:21 PM</h6>
+    </li>
+    <li>
+        <h4>In Production</h4>
+        <h6 class="time">Processing</h6>
+    </li>
+    <li>
+        <h4>Shipped</h4>
+        <h6 class="time">Pending</h6>
+    </li>
+    <li>
+        <h4>Delivered</h4>
+        <h6 class="time">Pending</h6>
+    </li>
+</ul> -->
